finished coding, but need more modification since the model is too large.

--- a/chen_pm/pm_small/pm_chen_reproduce_Nychka.rmd
+++ b/chen_pm/pm_small/pm_chen_reproduce_Nychka.rmd
@@ -153,30 +153,29 @@ nychka_fun <- function(spdist, theta){
   basis_fun_4 <- nychka_fun(basis_dist_4, theta = theta_4)
 
   # Define deep learning function
-  deep_learning <- function(model, x_tr, y_tr, x_te, y_te, epoch_stop)
-  {
-    model %>% compile(
-    loss = "mse",
-    optimizer = optimizer_adam(),
-    metrics = list("mse")
-  )
-
-  model_checkpoint <- callback_model_checkpoint(
-  filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
-  save_best_only = TRUE,
-  monitor = "val_loss",
-  mode = "min",
-  verbose = 1
-)
-  history <- model %>%
-  fit(x = x_tr, y = y_tr, epochs = epoch_stop, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, y_te))
-  model %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
-  return(model)
-  }
+#   deep_learning <- function(model, x_tr, y_tr, x_te, y_te, epoch_stop)
+#   {
+#     model %>% compile(
+#     loss = "mse",
+#     optimizer = optimizer_adam(),
+#     metrics = list("mse")
+#   )
+# 
+#   model_checkpoint <- callback_model_checkpoint(
+#   filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
+#   save_best_only = TRUE,
+#   monitor = "val_loss",
+#   mode = "min",
+#   verbose = 1
+# )
+#   history <- model %>%
+#   fit(x = x_tr, y = y_tr, epochs = epoch_stop, batch_size = 32, callbacks = list(model_checkpoint), validation_data = list(x_te, y_te))
+#   model %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
+#   return(model)
+#   }
   
 ```
 
-## DNN Model
 
 ```{r}
 set.seed(0)
@@ -184,13 +183,18 @@ train_index_all <- sample(1:10, length(pm), replace = T)
 loss_dnn <- rep(NA, 10)
 loss_dk <- rep(NA, 10)
 loss_ck <- rep(NA, 10)
-loss_nngp <- rep(NA, 10)
+loss_krig <- rep(NA, 10)
 
 pred_dnn <- rep(NA, length(pm))
 pred_dk <- rep(NA, length(pm))
 pred_ck <- rep(NA, length(pm))
-pred_nngp <- rep(NA, length(pm))
+pred_krig <- rep(NA, length(pm))
 ```
+
+
+## DNN Model
+
+
 
 
 ```{r}
@@ -229,7 +233,7 @@ model_dnn %>%
   verbose = 1
 )
   history <- model_dnn %>%
-  fit(x = x_tr, y = pm_tr, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, pm_te))
+  fit(x = x_tr, y = pm_tr, epochs = 200, batch_size = 32, callbacks = list(model_checkpoint), validation_data = list(x_te, pm_te))
   model_dnn %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
   
 
@@ -245,6 +249,8 @@ pred_dnn[-train_index] <- predict(model_dnn, x_te)
 
 ```{r}
 for (curr_index in 1:10) {
+  train_index <- which(train_index_all != curr_index)
+  
   # basis_tr <- basis_arr[train_index,,]
 # basis_te <- basis_arr[-train_index,,]
 # 
@@ -266,12 +272,10 @@ x_te <- as.matrix(cbind(scaled_cov[-train_index,], basis_fun_1[-train_index,], b
 # x_tr <- scale(as.matrix(cbind(cov_tr, basis_tr)))
 # x_te <- scale(as.matrix(cbind(cov_te, basis_te)))
 
-
 pm_tr <- pm[train_index]
 pm_te <- pm[-train_index]
 
 # Compile the model
-
 
 model_dk <- keras_model_sequential() 
 
@@ -314,50 +318,57 @@ pred_dk[-train_index] <- predict(model_dk, x_te)
 
 
 ```{r}
-
 # First resolution
-basis_arr_1 <- array(NA, dim = c(nrow(pm_cov), shape_row_1, shape_col_1))
-for (i in 1:nrow(pm_cov)) {
+shape_col_1 <- shape_row_1 <- 10
+basis_arr_1 <- array(NA, dim = c(length(pm), shape_row_1, shape_col_1))
+for (i in 1:length(pm)) {
   basis_arr_1[i,,] <- matrix(basis_fun_1[i,], nrow = shape_row_1, ncol = shape_col_1, byrow = T)
 }
 
 # Second resolution
-shape_row_2 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 2) , 2 ]))
-shape_col_2 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 2) , 1 ]))
-basis_arr_2 <- array(NA, dim = c(nrow(pm_cov), shape_row_2, shape_col_2))
-for (i in 1:nrow(pm_cov)) {
-  basis_arr_2[i,,] <- matrix(basis_use_2_2d[i,], nrow = shape_row_2, ncol = shape_col_2, byrow = T)
+shape_col_2 <- shape_row_2 <- 19
+basis_arr_2 <- array(NA, dim = c(length(pm), shape_row_2, shape_col_2))
+for (i in 1:length(pm)) {
+  basis_arr_2[i,,] <- matrix(basis_fun_2[i,], nrow = shape_row_2, ncol = shape_col_2, byrow = T)
 }
 
 # Third resolution
-shape_row_3 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 3) , 2 ]))
-shape_col_3 <- length(table(gridbasis3@df[which(gridbasis3@df$res == 3) , 1 ]))
-basis_arr_3 <- array(NA, dim = c(nrow(pm_cov), shape_row_3, shape_col_3))
-
-for (i in 1:nrow(pm_cov)) {
-  basis_arr_3[i,,] <- matrix(basis_use_3_2d[i,], nrow = shape_row_3, ncol = shape_col_3, byrow = T)
+shape_col_3 <- shape_row_3 <- 37
+basis_arr_3 <- array(NA, dim = c(length(pm), shape_row_3, shape_col_3))
+for (i in 1:length(pm)) {
+  basis_arr_3[i,,] <- matrix(basis_fun_3[i,], nrow = shape_row_3, ncol = shape_col_3, byrow = T)
 }
+
+# Fourth resolution
+shape_col_4 <- shape_row_4 <- 73
+basis_arr_4 <- array(NA, dim = c(length(pm), shape_row_4, shape_col_4))
+for (i in 1:length(pm)) {
+  basis_arr_4[i,,] <- matrix(basis_fun_4[i,], nrow = shape_row_4, ncol = shape_col_4, byrow = T)
+}
+
+for (curr_index in 1:10) {
+
+train_index <- which(train_index_all != curr_index)
 
 basis_tr_1 <- array_reshape(basis_arr_1[train_index,,], c(length(train_index), shape_row_1, shape_col_1, 1))
 basis_tr_2 <- array_reshape(basis_arr_2[train_index,,], c(length(train_index), shape_row_2, shape_col_2, 1))
 basis_tr_3 <- array_reshape(basis_arr_3[train_index,,], c(length(train_index), shape_row_3, shape_col_3, 1))
+basis_tr_4 <- array_reshape(basis_arr_4[train_index,,], c(length(train_index), shape_row_4, shape_col_4, 1))
 
 basis_te_1 <- array_reshape(basis_arr_1[-train_index,,], c(length(pm) - length(train_index), shape_row_1, shape_col_1, 1))
 basis_te_2 <- array_reshape(basis_arr_2[-train_index,,], c(length(pm) - length(train_index), shape_row_2, shape_col_2, 1))
 basis_te_3 <- array_reshape(basis_arr_3[-train_index,,], c(length(pm) - length(train_index), shape_row_3, shape_col_3, 1))
+basis_te_4 <- array_reshape(basis_arr_4[-train_index,,], c(length(pm) - length(train_index), shape_row_4, shape_col_4, 1))
 
-cov_tr <- as.matrix(cbind(cov_all[train_index,], long[train_index], lat[train_index]))
-cov_te <- as.matrix(cbind(cov_all[-train_index,], long[-train_index], lat[-train_index]))
+cov_tr <- scaled_cov[train_index,]
+cov_te <- scaled_cov[-train_index,]
 
-```
-
-
-```{r}
-drop = 0.2
+drop = 0.5
 # We need three convolutional input model and adding covariates.
 input_basis_1 <- layer_input(shape = c(shape_row_1, shape_col_1, 1))
 input_basis_2 <- layer_input(shape = c(shape_row_2, shape_col_2, 1))
 input_basis_3 <- layer_input(shape = c(shape_row_3, shape_col_3, 1))
+input_basis_4 <- layer_input(shape = c(shape_row_4, shape_col_4, 1))
 input_cov <- layer_input(shape = ncol(cov_tr))
 
 
@@ -400,6 +411,20 @@ resolution_1_conv <- input_basis_1 %>%
   layer_dropout(drop) %>%
   layer_dense(units = 100, activation = 'relu')
   
+  resolution_4_conv <- input_basis_4 %>%
+  layer_conv_2d(filters = 128, kernel_size = c(3,3), activation = 'relu') %>%
+  layer_batch_normalization() %>%
+  layer_dropout(drop) %>%
+  layer_flatten() %>%
+  layer_dense(units = 100, activation = 'relu') %>%
+  layer_batch_normalization() %>%
+  layer_dropout(drop) %>%
+  layer_dense(units = 100, activation = 'relu') %>%
+  layer_batch_normalization() %>%
+  layer_dropout(drop) %>%
+  layer_dense(units = 100, activation = 'relu')
+    
+  
   cov_model <- input_cov %>%
   layer_dense(units = 100, activation = 'relu') %>% 
   layer_batch_normalization() %>%
@@ -412,22 +437,20 @@ resolution_1_conv <- input_basis_1 %>%
   layer_dropout(drop) 
 
 
-all_model <- layer_concatenate(list(resolution_1_conv, resolution_2_conv, resolution_3_conv, cov_model))
+all_model <- layer_concatenate(list(resolution_1_conv, resolution_2_conv, resolution_3_conv, resolution_4_conv, cov_model))
+# all_model <- layer_concatenate(list(resolution_1_conv, resolution_2_conv, resolution_3_conv, cov_model))
+
 
 output_layer <- all_model %>%  layer_dense(units = 1, activation = 'linear')
 
-model_ck <- keras_model(inputs = list(input_basis_1, input_basis_2, input_basis_3, input_cov), outputs = output_layer)
+model_ck <- keras_model(inputs = list(input_basis_1, input_basis_2, input_basis_3,input_basis_4, input_cov), outputs = output_layer)
 
 model_ck <- 
 model_ck %>% compile(
-  optimizer = "adam",
+  optimizer = optimizer_adam(),
   loss = 'mse',
   metrics = c('mse')
 )
-```
-
-
-```{r}
  model_checkpoint <- callback_model_checkpoint(
   filepath = "C:/Users/10616/Desktop/temp/best_weights.h5",
   save_best_only = TRUE,
@@ -437,54 +460,67 @@ model_ck %>% compile(
 )
 
 mod_train_ck <- model_ck %>% fit(
-  x = list(basis_tr_1, basis_tr_2, basis_tr_3, cov_tr),
+  x = list(basis_tr_1, basis_tr_2, basis_tr_3,basis_tr_4, cov_tr),
   y = pm[train_index],
-  epochs=100,
-  batch_size=16,
-  validation_data=list(list(basis_te_1,basis_te_2,basis_te_3,cov_te), pm[-train_index]),
+  epochs=200,
+  batch_size=32,
+  validation_data=list(list(basis_te_1,basis_te_2,basis_te_3,basis_te_4,cov_te), pm[-train_index]),
   callbacks = model_checkpoint
 )
 
 model_ck %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
 
- loss_ck <- evaluate(model_ck, list(basis_te_1,basis_te_2,basis_te_3,cov_te), pm[-train_index])[2]
+ loss_ck[curr_index] <- evaluate(model_ck, list(basis_te_1,basis_te_2,basis_te_3,basis_te_4,cov_te), pm[-train_index])[2]
+ pred_ck[-train_index] <- predict(model_ck, list(basis_te_1,basis_te_2,basis_te_3,basis_te_4,cov_te))
+ 
+}
 ```
 
 
-## NNGP Model
+## Kriging Model
 
 
 ```{r}
-long_tr <- long[train_index]
-lat_tr <- lat[train_index]
+pair_dist_2d <- spDists(scaled_coords)
+for (curr_index in 1:10) {
+  
+train_index <- which(train_index_all != curr_index)
+long_tr <- scaled_long[train_index]
+lat_tr <- scaled_lat[train_index]
 pm_tr <- pm[train_index]
 pm_te <- pm[-train_index]
-long_te <- long[-train_index]
-lat_te <- lat[-train_index]
+long_te <- scaled_long[-train_index]
+lat_te <- scaled_long[-train_index]
+cov_tr <- scaled_cov[train_index,]
+cov_te <- scaled_cov[-train_index,]
 
-pm_cov <- scale(cbind(pm_avg, cov_dat[pm_avg[,1],])[,-c(1,3)])
-pm_cov_tr <- pm_cov[train_index, ]
-pm_cov_te <- pm_cov[-train_index, -1]
-
-spnn_mod_15 <- spNNGP(PM25 ~ -1 + . , data = as.data.frame(pm_cov_tr), coords = cbind(long_tr,lat_tr), cov.model = "exponential",
-                       priors = list("sigma.sq.IG" = c(0.001, 0.001),"tau.sq.IG" = c(0.001,0.001), "phi.Unif" = c(0.1,3)),
-                       starting = list("sigma.sq" = 100, "tau.sq" = 10, "phi" = 0.5),
-                       tuning = list( "sigma.sq" = 0.1, "tau.sq" = 0.1, "phi" = 0.1)
-                       , n.neighbors = 20, n.samples = 10000 )
-
- cv_curr_pred <- predict(spnn_mod_15, X.0 = as.matrix(pm_cov_te), coords.0 = cbind(long_te, lat_te))$p.y.0
+curr_res <- likfit(coords = cbind(long_tr, lat_tr), data = pm_tr, ini.cov.pars = c(1,1), fix.kappa = FALSE, nugget = 0, fix.nugget = FALSE, trend = pm_tr ~ cov_tr[,1] + cov_tr[,2] + cov_tr[,3] + cov_tr[,4] + 
+                     cov_tr[,5] + cov_tr[,6] + cov_tr[,7] + cov_tr[,8] )
  
-nngp_pred <- apply(cv_curr_pred, 1, mean)
+  curr_beta <- matrix(curr_res$beta, ncol = 1)
+  curr_sig <- curr_res$sigmasq
+  curr_phi <- curr_res$phi
+  curr_nu <- curr_res$kappa
+  cov_mat <-  curr_sig * matern(pair_dist_2d, kappa = curr_nu, phi = curr_phi)
+  
+  # Classical Kriging
+  exp_sig_11 <- cov_mat[train_index, train_index]
+  exp_sig_12 <- cov_mat[train_index, -train_index]
+  exp_sig_21 <- t(exp_sig_12)
+  exp_sig_22 <- cov_mat[-train_index, -train_index]
+  pred_krig[-train_index] <- cbind(1,cov_te) %*% curr_beta  + exp_sig_21 %*% solve(exp_sig_11) %*% matrix( as.numeric(pm_tr - cbind(1,cov_tr) %*% curr_beta), ncol = 1 )
+  loss_krig[curr_index] <- mean((pm_te - pred_krig[-train_index])^2)
+  
 
-loss_nngp <- mean((nngp_pred - pm_te)^2)
+}
+
 ```
 
 ```{r}
-loss_ck
-
-loss_dk
-
-loss_nngp
+loss_all <- as.data.frame(cbind(loss_krig,loss_dnn,loss_dk, loss_ck))
+ggplot() +
+  geom_boxplot(data = reshape2::melt(loss_all), aes(x = variable, y = value)) +
+   coord_flip()
 ```
 
 
