--- a/chen_pm/pm_small/pm_chen_reproduce_Nychka.rmd
+++ b/chen_pm/pm_small/pm_chen_reproduce_Nychka.rmd
@@ -5,7 +5,7 @@ date: "2023/4/3"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE}
+```{r}
 knitr::opts_chunk$set(echo = TRUE)
 rm(list = ls())
 library(FRK)
@@ -17,6 +17,7 @@ library(fields)
 library(sp)
 library(ncdf4)
 library(reticulate)
+library(geoR)
 use_condaenv("tf_gpu")
 library(tensorflow)
 library(keras)
@@ -132,20 +133,20 @@ nychka_fun <- function(spdist, theta){
   return(out)
 }
 
-  basis_1 <- expand.grid(seq(from = -1, to = 1, length.out = 10),seq(from = -1, to = 1, length.out = 10))  
-  basis_2 <- expand.grid(seq(from = -1, to = 1, length.out = 19),seq(from = -1, to = 1, length.out = 19))
-  basis_3 <- expand.grid(seq(from = -1, to = 1, length.out = 37),seq(from = -1, to = 1, length.out = 37))
-  basis_4 <- expand.grid(seq(from = -1, to = 1, length.out = 73),seq(from = -1, to = 1, length.out = 73))
+  basis_1 <- expand.grid(seq(from = 0, to = 1, length.out = 10),seq(from = 0, to = 1, length.out = 10))  
+  basis_2 <- expand.grid(seq(from = 0, to = 1, length.out = 19),seq(from = 0, to = 1, length.out = 19))
+  basis_3 <- expand.grid(seq(from = 0, to = 1, length.out = 37),seq(from = 0, to = 1, length.out = 37))
+  basis_4 <- expand.grid(seq(from = 0, to = 1, length.out = 73),seq(from = 0, to = 1, length.out = 73))
   
   basis_dist_1 <- spDists(as.matrix(scaled_coords), as.matrix(basis_1))
   basis_dist_2 <- spDists(as.matrix(scaled_coords), as.matrix(basis_2))
   basis_dist_3 <- spDists(as.matrix(scaled_coords), as.matrix(basis_3))
   basis_dist_4 <- spDists(as.matrix(scaled_coords), as.matrix(basis_4))
   
-  theta_1 <- 2.5* diff(seq(from = -1, to = 1, length.out = 10))[1]
-  theta_2 <- 2.5* diff(seq(from = -1, to = 1, length.out = 19))[1]
-  theta_3 <- 2.5* diff(seq(from = -1, to = 1, length.out = 37))[1]
-  theta_4 <- 2.5* diff(seq(from = -1, to = 1, length.out = 73))[1]
+  theta_1 <- 2.5* diff(seq(from = 0, to = 1, length.out = 10))[1]
+  theta_2 <- 2.5* diff(seq(from = 0, to = 1, length.out = 19))[1]
+  theta_3 <- 2.5* diff(seq(from = 0, to = 1, length.out = 37))[1]
+  theta_4 <- 2.5* diff(seq(from = 0, to = 1, length.out = 73))[1]
   
   basis_fun_1 <- nychka_fun(basis_dist_1, theta = theta_1)
   basis_fun_2 <- nychka_fun(basis_dist_2, theta = theta_2)
@@ -233,7 +234,7 @@ model_dnn %>%
   verbose = 1
 )
   history <- model_dnn %>%
-  fit(x = x_tr, y = pm_tr, epochs = 200, batch_size = 32, callbacks = list(model_checkpoint), validation_data = list(x_te, pm_te))
+  fit(x = x_tr, y = pm_tr, epochs = 1000, batch_size = 32, callbacks = list(model_checkpoint), validation_data = list(x_te, pm_te))
   model_dnn %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
   
 
@@ -276,19 +277,19 @@ pm_tr <- pm[train_index]
 pm_te <- pm[-train_index]
 
 # Compile the model
-
+drop = 0.1
 model_dk <- keras_model_sequential() 
 
 model_dk %>% 
   layer_dense(units = 100, activation = 'relu', input_shape = c( ncol(as.matrix(cbind(scaled_cov[train_index,], basis_fun_1[train_index,], basis_fun_2[train_index,]
                     , basis_fun_3[train_index,], basis_fun_4[train_index,]))) - length(num_0) ), kernel_initializer = "he_uniform") %>% 
-  layer_dropout(rate = 0.5) %>% 
-  layer_batch_normalization()%>%
   layer_dense(units = 100, activation = 'relu') %>% 
-  layer_dropout(rate = 0.5) %>% 
+  layer_dropout(drop) %>%
   layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization()%>%
+  layer_dropout(drop) %>%
+  layer_dense(units = 100, activation = 'relu') %>% 
   layer_dense(units = 1, activation = 'linear')
+
 
     model_dk %>% compile(
     loss = "mse",
@@ -304,7 +305,7 @@ model_dk %>%
   verbose = 1
 )
   history <- model_dk %>%
-  fit(x = x_tr, y = pm_tr, epochs = 200, batch_size = 64, callbacks = list(model_checkpoint), validation_data = list(x_te, pm_te))
+  fit(x = x_tr, y = pm_tr, epochs = 200, batch_size = 32, callbacks = list(model_checkpoint), validation_data = list(x_te, pm_te))
   model_dk %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h5")
   
 
@@ -319,11 +320,19 @@ pred_dk[-train_index] <- predict(model_dk, x_te)
 
 ```{r}
 # First resolution
+#rearrange_basis_order_1 <- order( basis_1[,1], basis_1[,2] )
 shape_col_1 <- shape_row_1 <- 10
 basis_arr_1 <- array(NA, dim = c(length(pm), shape_row_1, shape_col_1))
+
 for (i in 1:length(pm)) {
-  basis_arr_1[i,,] <- matrix(basis_fun_1[i,], nrow = shape_row_1, ncol = shape_col_1, byrow = T)
+  basis_arr_1[i,,] <- matrix(basis_fun_1[i,], nrow = shape_row_1, ncol = shape_col_1, byrow = TRUE)
 }
+
+test_idx <- 1
+ggplot() +
+  geom_raster(aes(x = basis_1[,1], y = basis_1[,2], fill = as.vector(basis_arr_1[test_idx,,]))) +
+  geom_point(aes(x = scaled_long[test_idx], y = scaled_lat[test_idx]))
+
 
 # Second resolution
 shape_col_2 <- shape_row_2 <- 19
@@ -363,7 +372,7 @@ basis_te_4 <- array_reshape(basis_arr_4[-train_index,,], c(length(pm) - length(t
 cov_tr <- scaled_cov[train_index,]
 cov_te <- scaled_cov[-train_index,]
 
-drop = 0.5
+drop = 0.3
 # We need three convolutional input model and adding covariates.
 input_basis_1 <- layer_input(shape = c(shape_row_1, shape_col_1, 1))
 input_basis_2 <- layer_input(shape = c(shape_row_2, shape_col_2, 1))
@@ -373,75 +382,38 @@ input_cov <- layer_input(shape = ncol(cov_tr))
 
 
 resolution_1_conv <- input_basis_1 %>%
-  layer_conv_2d(filters = 128, kernel_size = c(2,2), activation = 'relu') %>%
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_flatten() %>%
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu')
+  layer_conv_2d(filters = 100, kernel_size = c(2,2), activation = 'relu') %>%
+  
+ # layer_max_pooling_2d(pool_size = c(2,2)) %>%
+  layer_flatten()
 
   resolution_2_conv <- input_basis_2 %>%
-  layer_conv_2d(filters = 128, kernel_size = c(2,2), activation = 'relu') %>%
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_flatten() %>%
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu')
+  layer_conv_2d(filters = 100, kernel_size = c(2,2), activation = 'relu') %>%
+ # layer_max_pooling_2d(pool_size = c(2,2)) %>%
+  layer_flatten()
   
   resolution_3_conv <- input_basis_3 %>%
-  layer_conv_2d(filters = 128, kernel_size = c(3,3), activation = 'relu') %>%
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_flatten() %>%
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu')
+  layer_conv_2d(filters = 100, kernel_size = c(2,2), activation = 'relu') %>%
+ # layer_max_pooling_2d(pool_size = c(3,3)) %>%
+  layer_flatten() 
   
   resolution_4_conv <- input_basis_4 %>%
-  layer_conv_2d(filters = 128, kernel_size = c(3,3), activation = 'relu') %>%
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_flatten() %>%
-  layer_dense(units = 100, activation = 'relu') %>%
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu') %>%
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu')
-    
+  layer_conv_2d(filters = 100, kernel_size = c(2,2), activation = 'relu') %>%
+ # layer_max_pooling_2d(pool_size = c(4,4)) %>%
+  layer_flatten() 
   
-  cov_model <- input_cov %>%
-  layer_dense(units = 100, activation = 'relu') %>% 
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu') %>%
-  layer_batch_normalization() %>%
-  layer_dropout(drop) %>%
-  layer_dense(units = 100, activation = 'relu') %>%
-  layer_batch_normalization() %>%
-  layer_dropout(drop) 
+  cov_model <- input_cov 
 
 
 all_model <- layer_concatenate(list(resolution_1_conv, resolution_2_conv, resolution_3_conv, resolution_4_conv, cov_model))
 # all_model <- layer_concatenate(list(resolution_1_conv, resolution_2_conv, resolution_3_conv, cov_model))
 
 
-output_layer <- all_model %>%  layer_dense(units = 1, activation = 'linear')
+output_layer <- all_model %>%
+  layer_dense(units = 100, activation = 'relu') %>% 
+  layer_dense(units = 100, activation = 'relu') %>% 
+  layer_dense(units = 100, activation = 'relu') %>%
+  layer_dense(units = 1, activation = 'linear')
 
 model_ck <- keras_model(inputs = list(input_basis_1, input_basis_2, input_basis_3,input_basis_4, input_cov), outputs = output_layer)
 
@@ -477,7 +449,7 @@ model_ck %>% load_model_weights_hdf5("C:/Users/10616/Desktop/temp/best_weights.h
 ```
 
 
-## Kriging Model
+## Krigin g Model
 
 
 ```{r}
